--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "invoice-generator",
-  "version": "0.2.1",
+  "name": "invoice-app",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "homepage": "https://tuanpham-dev.github.io/react-invoice-generator/",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "prettier -c .",
-    "lint:write": "prettier -w .",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@react-pdf/renderer": "^3.4.2",
-    "@uidotdev/usehooks": "^2.4.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "date-fns": "^3.6.0",
-    "file-saver": "^2.0.5",
-    "gh-pages": "^6.1.1",
-    "rc-slider": "10.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
-    "react-textarea-autosize": "^8.5.3",
-    "sass": "^1.72.0",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.7",
-    "zod": "^3.22.4"
+    "react-icons": "^4.10.1",
+    "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.13",
+    "react-transition-group": "^4.4.5",
+    "uid": "^2.0.2",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/date-fns": "^2.6.0",
-    "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.11.30",
-    "@types/rc-slider": "^9.3.0",
-    "@types/react": "^18.2.73",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.23",
-    "@types/react-textarea-autosize": "^8.0.0",
-    "prettier": "^3.2.5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
